# cs234-submission

./: README.md
EthanFarah/scripts/: batch_reeval.py  spot_check.py  (+6 more)
EthanHarianto/: .env.example  .gitignore  environment.yml  pyproject.toml
EthanHarianto/configs/: base.yaml
EthanHarianto/configs/algo/: bandit.yaml  dqn.yaml  ppo.yaml  reinforce.yaml
EthanHarianto/configs/env/: meetingbank.yaml  squad.yaml
EthanHarianto/configs/policy/: custom_transformer.yaml  distilbert.yaml  tinyllama.yaml
EthanHarianto/configs/profiles/: smoke.yaml
EthanHarianto/configs/reward/: hybrid.yaml  kl_dense.yaml  learned.yaml  sparse.yaml
EthanHarianto/scripts/: download_data.py  fair_baseline_eval.py  fair_llmlingua2_eval.py  run_baselines.py  sweep.py  train_reward.py
EthanHarianto/src/: __init__.py  config.py  evaluate.py  train.py
EthanHarianto/src/algo/: advantage.py  bandit.py  base.py  dqn.py  ppo.py  reinforce.py  replay_buffer.py
EthanHarianto/src/baselines/: __init__.py  random_drop.py  selective_context.py
EthanHarianto/src/data/: __init__.py  meetingbank.py  sampler.py  squad.py  tokenization.py  types.py
EthanHarianto/src/env/: __init__.py  chunking.py  compression_env.py  spaces.py
EthanHarianto/src/llm/: __init__.py  frozen_llm.py  kl_cache.py
EthanHarianto/src/policy/: __init__.py  base.py  custom_transformer.py  distilbert.py  tinyllama.py
EthanHarianto/src/reward/: base.py  hybrid.py  kl_dense.py  learned.py  metrics.py  sparse.py
EthanHarianto/src/tracking/: checkpointing.py  wandb_logger.py
JessicaHu/: config.py  evaluate.py  train.py
(+38 files in other folders)
